--- a/app/templates/auth/login.html
+++ b/app/templates/auth/login.html
@@ -3,11 +3,75 @@
 
 {% block title %}Login{% endblock %}
 
-{% block page_content %}
-<div class="page-header">
-    <h1>Login</h1>
+{% block navbar %}
+<div class="navbar navbar-inverse" role="navigation">
+    <div class="container">
+        <div class="navbar-header">
+            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+                <span class="sr-only">Toggle navigation</span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+            </button>
+            <a class="navbar-brand" href=""></a>
+        </div>
+        <div class="navbar-collapse collapse">
+            <ul class="nav navbar-nav">
+                <li><a href=""></a></li>
+                <li><a href=""></a></li>
+                <li><a href=""></a></li>
+                <li><a href=""></a></li>
+                <li><a href=""></a></li>
+            </ul>
+        </div>
+    </div>
 </div>
-{{ wtf.quick_form(form) }}
-<br />
-<p class="text-left">or <a href="{{ url_for('auth.register') }}">Create New Account</a></p> 
+{% endblock %}
+
+{% block page_content %}
+<div class="row">
+    <div class="col-md-6 col-md-offset-3">
+      <div class="panel panel-default">
+        </div>
+        <div class="card-body">
+          <form method="POST" action="">
+            {{ form.hidden_tag() }}
+            
+            <!-- Username Field -->
+            <div class="form-group">
+              {{ form.username.label(class="form-control-label") }}
+              {{ form.username(class="form-control", placeholder="Enter your username") }}
+            </div>
+            
+            <!-- Password Field -->
+            <div class="form-group">
+              {{ form.password.label(class="form-control-label") }}
+              {{ form.password(class="form-control", placeholder="Enter your password") }}
+            </div>
+            
+            <!-- Remember Me Checkbox -->
+            <div class="form-group form-check">
+              {{ form.remember_me(class="form-check-input") }}
+              {{ form.remember_me.label(class="form-check-label") }}
+            </div>
+    
+            <!-- Submit Button -->
+            <button type="submit" class="btn btn-primary btn-block">
+              {{ form.submit.label.text }}
+
+            </button>
+
+            <!-- Forgot Password Added by Iyona-->
+            <div class="form-group-forgotpass text-center"> 
+                  <a href="{{ url_for('auth.forgotpass') }}">Forgot Password?</a>
+             </div>
+          </form>
+        </div>
+        <div class="card-footer text-center">
+          <p>or</p>
+            <a href="{{ url_for('auth.register') }}">Create New Account</a>
+        </div>
+      </div>
+    </div>
+  </div>
 {% endblock %}
