--- a/app/templates/auth/login.html
+++ b/app/templates/auth/login.html
@@ -1,6 +1,12 @@
 {% extends "base.html" %}
 {% import "bootstrap/wtf.html" as wtf %}
 
+{% block head %}
+  {{ super() }}
+  <!-- Link to your custom CSS file -->
+  <link rel="stylesheet" href="{{ url_for('static', filename='custom.css') }}">
+{% endblock %}
+
 {% block title %}Login{% endblock %}
 
 {% block navbar %}
@@ -29,14 +35,16 @@
 {% endblock %}
 
 {% block page_content %}
-<div class="row">
-    <div class="col-md-6 col-md-offset-3">
-      <div class="panel panel-default">
-        </div>
+
+      <div class="card mt-5 loginblock">
+        <div class="text-center business-name">Loyals Booking</div>
         <div class="card-body">
           <form method="POST" action="">
             {{ form.hidden_tag() }}
-            
+            <!-- Card Title -->
+            <div class="form-group-title text-center"> 
+             <p>Log in to your account</p>
+            </div>
             <!-- Username Field -->
             <div class="form-group">
               {{ form.username.label(class="form-control-label") }}
@@ -68,10 +76,22 @@
           </form>
         </div>
         <div class="card-footer text-center">
-          <p>or</p>
-            <a href="{{ url_for('auth.register') }}">Create New Account</a>
+          <a href="{{ url_for('auth.register') }}" class="btn btn-primary btn-lg">Create New Account</a>
         </div>
       </div>
     </div>
   </div>
+  <!--Start of Tawk.to Script-->
+<script type="text/javascript">
+  var Tawk_API=Tawk_API||{}, Tawk_LoadStart=new Date();
+  (function(){
+  var s1=document.createElement("script"),s0=document.getElementsByTagName("script")[0];
+  s1.async=true;
+  s1.src='https://embed.tawk.to/67a302a1825083258e102c08/1ijac4hqq';
+  s1.charset='UTF-8';
+  s1.setAttribute('crossorigin','*');
+  s0.parentNode.insertBefore(s1,s0);
+  })();
+  </script>
+  <!--End of Tawk.to Script-->
 {% endblock %}
