--- a/app/templates/auth/login.html
+++ b/app/templates/auth/login.html
@@ -4,7 +4,7 @@
 {% block head %}
   {{ super() }}
   <!-- Link to your custom CSS file -->
-  <link rel="stylesheet" href="{{ url_for('static', filename='custom.css') }}">
+  <link rel="stylesheet" href="{{ url_for('static', filename='css/login.css') }}">
 {% endblock %}
 
 {% block title %}Login{% endblock %}
