--- a/app/templates/auth/login.html
+++ b/app/templates/auth/login.html
@@ -43,7 +43,7 @@
             {{ form.hidden_tag() }}
             <!-- Card Title -->
             <div class="form-group-title text-center"> 
-             <p>Log in to your account</p>
+             <p>Log in</p>
             </div>
             <!-- Username Field -->
             <div class="form-group">
