--- a/app/templates/auth/forgotpass.html
+++ b/app/templates/auth/forgotpass.html
@@ -1,11 +1,56 @@
 {% extends "base.html" %}
 {% import "bootstrap/wtf.html" as wtf %}
 
+{% block head %}
+  {{ super() }}
+  <!-- Link to your custom CSS file -->
+  <link rel="stylesheet" href="{{ url_for('static', filename='css/forgotpass.css') }}">
+{% endblock %}
+
 {% block title %}Forgot Password{% endblock %}
 
-{% block page_content %}
+{% block header %}
 <div class="page-header">
     <h1>Forgot Password</h1>
 </div>
-{{ wtf.quick_form(form) }}
 {% endblock %}
+
+{% block page_content %}
+
+      <div class="card mt-5 loginblock">
+        <div class="text-center business-name">Loyals Booking</div>
+        <div class="card-body">
+          <form method="POST" action="">
+            {{ form.hidden_tag() }}
+
+            <!-- Card Title -->
+            <div class="form-group-title text-center"> 
+             <p>Reset Password</p>
+            </div>
+
+            <div class="text-left" id="notice">
+                <p>Enter your email address or username and we’ll send you a link to reset your password.</p>
+            </div>
+
+            <!-- email -->
+            <div class="form-group-email" id="email">
+            {{ form.email.label(class="form-control-label") }}
+            {{ form.email(class="form-control", placeholder="Enter your email") }}
+            </div>
+            
+            <!-- Submit Button -->
+            <button type="submit" class="btn btn-primary btn-block" id="submitbutton">
+                {{ form.submit.label.text }}
+                </button>
+
+
+            <div class="text-center">
+                <p class="text-or">or</p>
+                <a href="{{ url_for('auth.register') }}">Create new account</a>
+            </div>
+            
+        </div>
+      </div>
+    </div>
+  </div>
+  {% endblock %}
