--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -11,15 +11,15 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="">Home</a>
+            <a class="navbar-brand" href=""></a>
         </div>
         <div class="navbar-collapse collapse">
             <ul class="nav navbar-nav">
-                <li><a href="">New Appointment</a></li>
-                <li><a href="">Dashboard</a></li>
-                <li><a href="">Rewards</a></li>
-                <li><a href="">Clients</a></li>
-                <li><a href="">My Services</a></li>
+                <li><a href=""></a></li>
+                <li><a href=""></a></li>
+                <li><a href=""></a></li>
+                <li><a href=""></a></li>
+                <li><a href=""></a></li>
             </ul>
         </div>
     </div>
