--- a/app/static/css/forgotpass.css
+++ b/app/static/css/forgotpass.css
@@ -11,7 +11,7 @@
 
   .loginblock{
     min-width: 350px;
-    margin-top: 20px;
+    margin-top: 100px;
     margin-right: 450px;
     margin-left: 400px;
     max-width: 350px;
@@ -53,4 +53,8 @@
   .text-or::after {
   left: 0.5em;
   margin-right: -50%;
+  }
+  .btn-primary {
+    background-color: #2f2f2f;
+    border-color: #2f2f2f;
   }
