--- a/app/templates/auth/login.html
+++ b/app/templates/auth/login.html
@@ -66,8 +66,16 @@
             <!-- Submit Button -->
             <button type="submit" class="btn btn-primary btn-block">
               {{ form.submit.label.text }}
-
             </button>
+            
+            {% with messages = get_flashed_messages() %}
+            {% if messages %}
+              {% for message in messages %}
+              <p style="color: green;">{{ message }}</p>
+              {% endfor %}
+            {% endif %}
+          {% endwith %}
+  
 
             <!-- Forgot Password Added by Iyona-->
             <div class="form-group-forgotpass text-center"> 
