--- a/app/templates/auth/register.html
+++ b/app/templates/auth/register.html
@@ -59,10 +59,10 @@
           {{ form.password(class="form-control", placeholder="Enter your password") }}
         </div>
         
-        <!-- <div class="form-group">
+        <div class="form-group">
           {{ form.confirm_password.label(class="form-control-label") }}
           {{ form.confirm_password(class="form-control", placeholder="Confirm your password") }}
-        </div> -->
+        </div> 
         
         <button type="submit" class="btn btn-primary btn-block">
           {{ form.submit.label.text }}
