--- a/app/templates/dashboard.html
+++ b/app/templates/dashboard.html
@@ -47,10 +47,12 @@
     >
   </button>
   <a href="{{ url_for('main.dashboard') }}">Dashboard</a>
+  <a href="{{ url_for('auth.profilesettings') }}">Profile Settings</a>
   <a href="#">Rewards</a>           <!-- "sidebar a" in the css folder -->
   <a href="#">Clients</a>
   <a href="{{ url_for('auth.myservices') }}">My Services</a>
   <a href="{{ url_for('auth.logout') }}">Logout</a>
+
 </div>
 
 <header id="header">Dashboard</header>
@@ -72,7 +74,6 @@
   </div>
 </div>
 -->
-</div>
 
     <!-- Bootstrap JS (Required for Collapse) -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
