--- a/app/static/css/myservices.css
+++ b/app/static/css/myservices.css
@@ -65,6 +65,7 @@ padding-left: 20px;
 #sidebar.expanded ~ #header{
     margin-left: 100px;
 }
+
 .navbar-toggler{
     display: block;
     margin: 30px; 
@@ -77,6 +78,7 @@ padding-left: 20px;
     font-size: 17px;
     font-style: italic;
     width: auto; 
+
 }
 
 .pull-left{
@@ -93,7 +95,26 @@ padding-left: 20px;
     border-radius: 10px;
     padding: 15px;
     margin-bottom: 10px;
+    
   }
+.card-body{
+    max-width: auto;
+}
+
+  .service-title{
+    font-size: large;
+  }
+
+  .service-description{
+    font-size: small;
+  }
+
+  .service-price{
+    font-size: Large;
+    margin-top: -30px;
+  }
+  
+
 /* Responsive Sidebar (ON Small Screens ONLY!!!!!!) */
 @media (max-width: 768px) {
     #sidebar {
