fixed service card body text

--- a/app/templates/auth/myservices.html
+++ b/app/templates/auth/myservices.html
@@ -73,15 +73,19 @@
         <!-- Button to toggle adding a new service -->
         <button type="button" class="pull-right btn btn-primary btn-block btn-create-service" data-toggle="modal" data-target="#Modal">+ Create New Service</button>
       </div>
-      <div class="mb-3">
+      
+      <div class="searchbar">
         <input type="text" class="form-control" placeholder="Search...">
       </div>
+
         <!-- the listed service -->
       <div id="services-list">
         <div class="service-card">
+
              <!-- this controls service card text as a whole  -->
           <div class="card-body">
             <h5 class="service-title">Hair Dressing</h5>
+
                <!-- this controls the description and price row -->
             <div class="service-description text-muted mb-0">Office ipsum you must be muted. Horse re-inventing six design if cross beef.</div>
             <div class="service-price fw-bold pull-right">$30</div>       
