--- a/app/static/css/myservices.css
+++ b/app/static/css/myservices.css
@@ -73,11 +73,14 @@ padding-left: 20px;
 .btn-primary{
     background-color: blue;
 }
+.searchbar{
+   margin-top: 16px; 
+}
 
 .btn-create-service{
     font-size: 17px;
     font-style: italic;
-    width: auto; 
+    width: auto;
 
 }
 
