Updated Profile Page
Created the basic card for the user profile. Having issues with moving the card below the title and displaying the default profile picture. Require assistance for dynamic elements, i.e., the profile type and the plan currently used for the account.

--- a/app/templates/dashboard.html
+++ b/app/templates/dashboard.html
@@ -47,7 +47,7 @@
     >
   </button>
   <a href="{{ url_for('main.dashboard') }}">Dashboard</a>
-  <a href="{{ url_for('auth.profilesettings') }}">Profile Settings</a>
+  <a href="{{ url_for('auth.profilesettings') }}">Profile</a>
   <a href="#">Rewards</a>           <!-- "sidebar a" in the css folder -->
   <a href="#">Clients</a>
   <a href="{{ url_for('auth.myservices') }}">My Services</a>
