--- a/app/static/css/profilesettings.css
+++ b/app/static/css/profilesettings.css
@@ -99,3 +99,34 @@ padding-left: 20px;
         margin-left: 80px;
     }
 }
+
+/*The login form card*/
+.card-body {
+    padding: 20px;
+    border-radius: 8px;
+    box-shadow: 2px 10px 30px rgba(0, 0, 0, 0.747);
+    background-color: white;
+  }
+
+.container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+   
+  }
+
+.card-title {
+  line-height: 3;
+  font-size: 30px;
+}
+
+.card-text {
+    line-height: 2;
+    font-size: 20px;
+}
+
+.editbutton {
+  background-color: #2f2f2f;
+  border-color: #2f2f2f;
+  border-radius:30px;
+}
