--- a/app/templates/auth/profilesettings.html
+++ b/app/templates/auth/profilesettings.html
@@ -44,7 +44,7 @@
       >
     </button>
     <a href="{{ url_for('main.dashboard') }}">Dashboard</a>
-    <a href="{{ url_for('auth.profilesettings') }}">Profile Settings</a>
+    <a href="{{ url_for('auth.profilesettings') }}">Profile</a>
     <a href="#">Rewards</a>           <!-- "sidebar a" in the css folder -->
     <a href="#">Clients</a>
     <a href="{{ url_for('auth.myservices') }}">My Services</a>
@@ -52,11 +52,24 @@
   
   </div>
 
-  <header id="header">Profile Settings</header>
+  <div class="row">
+    <header id="header">My Profile</header>
+  </div>
 
 <!-- Main Content -->
 <div id="content">
-    
+  <div class="container">
+    <div class="row">
+      <div class="card">
+        <div class="card-body text-center">
+          <img src="/app/assets/DefaultProfile.png" alt="Profile Picture">
+          <h5 class="card-title">[Username]</h5>
+          <p class="card-text text-left">Profile type: [Owner/Client]<br>Plan: [Trial/Basic/Premium]<br></p>
+          <a href="#" class="btn btn-primary btn-lg editbutton">Edit profile</a>
+        </div>
+      </div>
+    </div>
+  </div>
 </div>
 
 
