updated dashboard components for visualization

--- a/app/templates/auth/myservices.html
+++ b/app/templates/auth/myservices.html
@@ -87,7 +87,7 @@
             <h5 class="service-title">Hair Dressing</h5>
 
                <!-- this controls the description and price row -->
-            <div class="service-description text-muted mb-0">Office ipsum you must be muted. Horse re-inventing six design if cross beef.</div>
+            <div class="service-description text-muted mb-0">This is proof of concept</div>
             <div class="service-price fw-bold pull-right">$30</div>       
           </div>
         </div>
