--- a/app/static/css/dashboard.css
+++ b/app/static/css/dashboard.css
@@ -2,6 +2,14 @@ body {
     background-color: #f4f4f4;
 }
 
+#header{
+    text-align: center !important;
+    height: -20px;
+    padding-bottom: 50px;
+    justify-content: center;
+    display: flex !important;
+}
+
 #sidebar {
     width: 100px;
     position: fixed;
@@ -40,19 +48,6 @@ padding-left: 20px;
     background: #495057;
 }
 
-/* Content */
-#content {
-    margin-left: 10px;
-    padding: 20px;
-}
-
-#header{
-    height: -20px;
-    margin-left: 10px;
-    padding: 20px;
-    font-size: 50px;
-}
-
 /* Adjust navbar */
 .navbar {
     z-index: 1050; /* Ensure it stays on top */
@@ -63,15 +58,57 @@ padding-left: 20px;
 }
 
 #sidebar.expanded ~ #header{
-    margin-left: 100px;
+    text-align: center !important;
 }
+
 .navbar-toggler{
     display: block;
     margin: 30px; 
 }
 
+
+.calendar_header{
+    display: flex !important;
+}
+
+.col-6{
+    width: 310px;
+    
+}
+
+.month-year{
+    text-align: center;
+}
+
+.switch-month{
+    padding: 2px 2px;
+    width: auto;
+    background-color: #04AA6D;
+    font-size: 30px;
+    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
+    height: 47px;
+    margin-top: 15px;
+
+}
+
+.main-content{
+    width: 350px;
+    justify-content: center;
+}
+
+.btn-availability{
+    background-color: transparent;
+    color: blue;
+    border: none;
+    font-size: 17px;
+    width: auto;
+    margin-top: -40px;
+    font-weight: bold;
+}
 /* Responsive Sidebar (ON Small Screens ONLY!!!!!!) */
-@media (max-width: 768px) {
+@media (max-width: 1911px) {
+    /* test */
+    
     #sidebar {
         height: 100%;
         position: absolute;
@@ -86,7 +123,7 @@ padding-left: 20px;
     }
 
     #sidebar.expanded ~ #content{
-        margin-left: 200px;
+        margin-left: 200px !important;
     }
     
     #content {
@@ -95,12 +132,15 @@ padding-left: 20px;
     }
 
     #sidebar.expanded ~ #header{
-        margin-left: 200px;
+        text-align: center !important;
     }
 
     #header{
-        margin-top: -50px;
-        margin-left: 80px;
+        text-align: center !important;
+        width: 100% !important;
+        margin: 0 auto !important;
+        display: flex;
+        justify-content: center;
     }
 
 
