Minor changes to page HTML
Removed unnecessary class types as well as page header, as it doesn't seem worth the trouble to try and align the card underneath it when it looks fine just being the card.

--- a/app/templates/auth/profilesettings.html
+++ b/app/templates/auth/profilesettings.html
@@ -52,21 +52,16 @@
   
   </div>
 
-  <div class="row">
-    <header id="header">My Profile</header>
-  </div>
 
 <!-- Main Content -->
 <div id="content">
-  <div class="container">
-    <div class="row">
-      <div class="card">
-        <div class="card-body text-center">
-          <img src="/app/assets/DefaultProfile.png" alt="Profile Picture">
-          <h5 class="card-title">[Username]</h5>
-          <p class="card-text text-left">Profile type: [Owner/Client]<br>Plan: [Trial/Basic/Premium]<br></p>
-          <a href="#" class="btn btn-primary btn-lg editbutton">Edit profile</a>
-        </div>
+  <div class="container align-items-center">
+    <div class="card">
+      <div class="card-body text-center">
+        <img class="card-img-top" src="/app/assets/DefaultProfile.png" alt="Profile Picture">
+        <h5 class="card-title">[Username]</h5>
+        <p class="card-text text-left">Profile type: [Owner/Client]<br>Plan: [Trial/Basic/Premium]<br></p>
+        <a href="#" class="btn btn-primary btn-lg editbutton">Edit profile</a>
       </div>
     </div>
   </div>
