--- a/app/static/css/profilesettings.css
+++ b/app/static/css/profilesettings.css
@@ -100,9 +100,10 @@ padding-left: 20px;
     }
 }
 
-/*The login form card*/
+/*The profile card*/
 .card-body {
-    padding: 20px;
+    padding: 50px;
+    padding-top: 150px;
     border-radius: 8px;
     box-shadow: 2px 10px 30px rgba(0, 0, 0, 0.747);
     background-color: white;
@@ -129,4 +130,8 @@ padding-left: 20px;
   background-color: #2f2f2f;
   border-color: #2f2f2f;
   border-radius:30px;
+}
+
+.img {
+    width: 450px;
 }
