--- a/app/static/css/profilesettings.css
+++ b/app/static/css/profilesettings.css
@@ -103,8 +103,7 @@ padding-left: 20px;
 /*The profile card*/
 .card-body {
     padding: 50px;
-    padding-top: 150px;
-    border-radius: 8px;
+    border-radius: 10px;
     box-shadow: 2px 10px 30px rgba(0, 0, 0, 0.747);
     background-color: white;
   }
@@ -122,7 +121,7 @@ padding-left: 20px;
 }
 
 .card-text {
-    line-height: 2;
+    line-height: 1;
     font-size: 20px;
 }
 
@@ -130,8 +129,11 @@ padding-left: 20px;
   background-color: #2f2f2f;
   border-color: #2f2f2f;
   border-radius:30px;
+  margin: 5px;
 }
 
-.img {
-    width: 450px;
+img {
+    width: 200px;
+    border: 4px solid #2f2f2f;
+    border-radius: 50%;
 }
