--- a/app/templates/auth/myservices.html
+++ b/app/templates/auth/myservices.html
@@ -37,7 +37,7 @@
           <div class="modal-content">
             <div class="modal-header">
               <h5 class="modal-title" id="ModalLabel">Create a New Serivce</h5>
-              <button type="button" class="closex" data-dismiss="modal" aria-label="Close">
+              <button type="button" class="closex pull-right" data-dismiss="modal" aria-label="Close">
                 <span aria-hidden="true">&times;</span>
               </button>
           </div>
