--- a/app/templates/dashboard.html
+++ b/app/templates/dashboard.html
@@ -67,14 +67,32 @@
     <div class="container main-content">
       <div class="row">
         <div class="calendar_header">
-          <button class="col-6 switch-month switch-left"> <span class="glyphicon glyphicon-menu-right"></span></button>
+          <button class="col-6 switch-month switch-left"> <span class="glyphicon glyphicon-menu-left"></span></button>
            <h2 class="col-6 month-year">Month Year</h2>
           <button class="col-6 switch-month switch-right "> <span class="glyphicon glyphicon-menu-right"></span></i></button>
         </div>
       </div>
     </div>
   </div>
+  <div class="modal fade" id="Modal" tabindex="-1" role="dialog" aria-labelledby="ModalLabel" aria-hidden="true">
+    <div class="modal-dialog" role="document">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title" id="ModalLabel">Set Availability</h5>
+          <button type="button" class="closex pull-right" data-dismiss="modal" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+          </button>
+      </div>
+          <!-- the fields to create a serivce -->
 
+
+    <div class="modal-footer">
+      <button type="button" class="btn btn-secondary closebutton" data-dismiss="modal">Close</button>
+      <button type="submit" class="btn btn-primary addservice">Save</button>
+    </div>
+  </div>
+</div>
+</div>
     <!-- Bootstrap JS (Required for Collapse) -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 
