--- a/app/static/css/myservices.css
+++ b/app/static/css/myservices.css
@@ -117,6 +117,9 @@ padding-left: 20px;
     margin-top: -30px;
   }
   
+  #Modal{ 
+    margin-top: 280px;
+  }
 
 /* Responsive Sidebar (ON Small Screens ONLY!!!!!!) */
 @media (max-width: 768px) {
