edited formatting on my services page

--- a/app/templates/auth/myservices.html
+++ b/app/templates/auth/myservices.html
@@ -40,17 +40,17 @@
               <button type="button" class="closex pull-right" data-dismiss="modal" aria-label="Close">
                 <span aria-hidden="true">&times;</span>
               </button>
-          </div>
+            </div>
               <!-- the fields to create a serivce -->
         <div class="modal-body">
           <form id="createServiceForm">
             <div class="mb-3">
               <label for="serviceName" class="form-label">Service Name</label>
-              <input type="text" class="form-control" id="serviceName" required>
+              <input type="text" class="form-control" id="serviceName" placeholder="Enter Title" required>
             </div>
             <div class="mb-3">
               <label for="serviceDescription" class="form-label">Description</label>
-              <textarea class="form-control" id="serviceDescription" rows="3" required></textarea>
+              <textarea class="form-control" id="serviceDescription" rows="3" placeholder="Enter a description" required></textarea>
             </div>
             <div class="mb-3">
               <label for="servicePrice" class="form-label">Price</label>
