--- a/app/static/css/myservices.css
+++ b/app/static/css/myservices.css
@@ -42,8 +42,8 @@ padding-left: 20px;
 
 /* Content */
 #content {
-    margin-left: 10px;
-    padding: 20px;
+    margin-left: 2px;
+    padding: 10px;
 }
 
 #header-left{
@@ -112,11 +112,24 @@ padding-left: 20px;
     font-size: small;
   }
 
+  /* Centers price on service card */
   .service-price{
     font-size: Large;
-    margin-top: -30px;
+    margin-top: -45px;
   }
-  
+
+.modal-title{
+    font-size: 20px;
+}
+.modal-header{
+    justify-content: center;
+}
+.closex{
+    margin-top: -20px;
+}
+.mb-3{
+    justify-content: space-around; 
+}
 
 /* Responsive Sidebar (ON Small Screens ONLY!!!!!!) */
 @media (max-width: 768px) {
