--- a/app/templates/auth/myservices.html
+++ b/app/templates/auth/myservices.html
@@ -46,7 +46,7 @@
           <form id="createServiceForm">
             <div class="mb-3">
               <label for="serviceName" class="form-label">Service Name</label>
-              <input type="text" class="form-control" id="serviceName" placeholder="Enter Title" required>
+              <input type="text" class="form-control" id="serviceName" placeholder="Enter title" required>
             </div>
             <div class="mb-3">
               <label for="serviceDescription" class="form-label">Description</label>
@@ -54,11 +54,10 @@
             </div>
             <div class="mb-3">
               <label for="servicePrice" class="form-label">Price</label>
-              <input step="0.01" type="number" class="form-control" id="servicePrice" required>
+              <input step="0.01" type="number" class="form-control" id="servicePrice" placeholder="Enter a price" required>
             </div>
           </form>
         </div>
-  
         <div class="modal-footer">
           <button type="button" class="btn btn-secondary closebutton" data-dismiss="modal">Close</button>
           <button type="submit" class="btn btn-primary addservice">Add Service</button>
