--- a/app/static/css/myservices.css
+++ b/app/static/css/myservices.css
@@ -118,6 +118,15 @@ padding-left: 20px;
     margin-top: -45px;
   }
 
+  .main-content{
+    width: 350px;
+    justify-content: center;
+}
+
+#Modal{ 
+    margin-top: 190px;
+  }
+
 .modal-title{
     font-size: 20px;
 }
@@ -125,7 +134,7 @@ padding-left: 20px;
     justify-content: center;
 }
 .closex{
-    margin-top: -20px;
+    margin-top: -25px;
 }
 .mb-3{
     justify-content: space-around; 
