--- a/app/templates/auth/editprofilesettings.html
+++ b/app/templates/auth/editprofilesettings.html
@@ -4,7 +4,7 @@
 {% block head %}
   {{ super() }}
   <!-- Link to your custom CSS file -->
-  <link rel="stylesheet" href="{{ url_for('static', filename='css/profilesettings.css') }}">
+  <link rel="stylesheet" href="{{ url_for('static', filename='css/editprofilesettings.css') }}">
 {% endblock %}
 
 {% block navbar %}
@@ -49,7 +49,6 @@
     <a href="#">Clients</a>
     <a href="{{ url_for('auth.myservices') }}">My Services</a>
     <a href="{{ url_for('auth.logout') }}">Logout</a>
-  
   </div>
 
 
@@ -58,13 +57,30 @@
   <div class="container align-items-center">
     <div class="card">
       <div class="card-body text-center">
+        <form method="POST" action="" enctype="multipart/form-data">
+            {{ form.hidden_tag() }}
+            <h5 class="card-title">Editing Profile</h5>
+        <!-- Profile Picture -->
         <img class="card-img-top" src="{{ url_for('static', filename='images/DefaultProfile.png') }}" alt="Profile Picture">
-        <h5 class="card-title">{{ username }}</h5>
-        <p class="card-text">Profile type: {{ account }}</p>
-        <a href="{{ url_for('auth.myservices') }}" class="btn btn-primary editbutton">Services<br></a>
-        <div class="row">
-          <a href="{{ url_for('auth.editprofilesettings') }}" class="btn btn-primary btn-lg editbutton">Edit profile</a>
+        <div class="form-group form-file">
+            {{ form.profile_pic.label(class="form-control-label") }}
+            {{ form.profile_pic() }}
         </div>
+        <!-- Username -->
+            <div class="form-group text-left">
+                {{ form.username.label(class="form-control-label") }}
+                {{ form.username(class="form-control", placeholder="Enter your username") }}
+            </div>
+        <!-- Account Type -->
+            <div class="form-group form-radio text-left">
+                {{ form.account_type.label(class="form-radio-label") }}
+                {{ form.account_type(class="form-radio-input") }}
+            </div>
+        <!-- Submit Button -->
+            <button type="submit" class="btn btn-primary btn-lg savebutton">
+                {{ form.submit.label.text }}
+            </button>
+          </form>
       </div>
     </div>
   </div>
