--- a/app/templates/dashboard.html
+++ b/app/templates/dashboard.html
@@ -101,7 +101,9 @@
 <script>
   let calendarEl = document.getElementById('calendar');
 
-  let calendar = new FullCalendar.Calendar(calendarEl, {});
+  let calendar = new FullCalendar.Calendar(calendarEl, {
+
+  });
 
   calendar.render();
 </script>
