--- a/app/static/css/dashboard.css
+++ b/app/static/css/dashboard.css
@@ -3,7 +3,6 @@ body {
 }
 
 #header{
-    background-color: #fecef6;
     text-align: center !important;
     height: -20px;
     padding-bottom: 50px;
@@ -12,10 +11,10 @@ body {
 
 }
 
-#sidebar {
-    width: 100px;
+#sidebarfullscreen {
+    width: 200px;
     position: fixed;
-    top: 52px; /* Adjust to match navbar height */
+    top: 0px; /* Adjust to match navbar height was 52 */
     left: 0;
     bottom: auto;
     height: 100%;
@@ -35,19 +34,26 @@ text-align: left;
 padding-left: 20px;
 }
 
+#sidebartitle{
+    font-size: 20px;
+    color: rgb(0, 0, 0);
+    text-align: center;
+}
 /* Text of letters */
-#sidebar a {
+#sidebarfullscreen a, p {
+    font-size: 17px;
+    font-family: sans-serif;
     color: rgb(0, 0, 0);
     padding: 10px;
     display: block;
     text-decoration: none;
-    margin-top: 20px;
+    margin-top: 50px;
     white-space: nowrap;
     text-overflow: ellipsis;
-    text-align: center;
+    text-align: left;
 }
 
-#sidebar a:hover {
+#sidebarfullscreen a:hover {
     background: #495057;
 }
 
@@ -81,16 +87,6 @@ padding-left: 20px;
 
 .month-year{
     text-align: center;
-}
-
-.switch-month{
-    padding: 2px 2px;
-    width: auto;
-    background-color: #04AA6D;
-    font-size: 30px;
-    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
-    height: 47px;
-    margin-top: 15px;
 }
 
 .main-content{
@@ -135,8 +131,10 @@ padding-left: 20px;
     right: 400px;
 }
 
-#content{
-    }
+#calendar{
+margin-top: -30px;
+
+}
 
 /* Responsive Sidebar (ON Small Screens ONLY!!!!!!) */
 @media (max-width: 1911px) {
@@ -177,6 +175,11 @@ padding-left: 20px;
         justify-content: center;
     }
 
+    #calendar{
+        margin-left: absolute;
+    }
+}
+
     /* EVERYTHING DEALING WITH THE CALENDAR ONLY */
 :root {
     --fc-button-bg-color: BLUE;
@@ -188,7 +191,21 @@ padding-left: 20px;
         color: #495057;
         font-size: small;
     }
+
+    .fc-col-header { /* MIGHT BE USELESS??? */
+        border-radius: 16px !important;
+      }
+      
+    .fc-scrollgrid { /* Formatting grid for top and left */
+        border-radius: 16px !important;
+      }
+      .fc-scrollgrid-section > th {/* Formatting grid for right*/
+        border-radius: 0px 16px 0px 0px !important;
+      }
+      .fc-scrollgrid-section > td {/* Formatting grid for bottom right*/
+        border-radius: 0px 0px 16px 16px !important;
+      }
 }
 
 
-}
+
