--- a/app/templates/dashboard.html
+++ b/app/templates/dashboard.html
@@ -59,8 +59,20 @@
 
 <!-- header -->
 <header id="header">
-<h1>Dashboard</h1>
-</header>
+  <h1>Dashboard</h1>
+  </header>
+<div id="containerQuickInsight">
+  <p id="quickinsightTitle">Quick Insight</p>
+  <div class="card" style="width: 18rem;">
+    <div class="card-body">
+      <h5 class="card-title">Total Bookings</h5>
+      <p class="card-text">0</p>
+    </div>
+  </div>
+</div>
+  <!-- main -->
+<div id="main">
+  
 <div id="content">
   <button type="button" class="pull-right btn btn-primary btn-block btn-availability" data-toggle="modal" data-target="#Modal">+ Set Availability</button>
   <div class="modal fade" id="Modal" tabindex="-1" role="dialog" aria-labelledby="ModalLabel" aria-hidden="true">
@@ -129,6 +141,7 @@
       </div>
     </div>
    </div>
+</div>
 </div>
 </div>
     <!-- Bootstrap JS (Required for Collapse) -->
