added services.py form and dashboard formatting

--- a/app/templates/dashboard.html
+++ b/app/templates/dashboard.html
@@ -62,11 +62,17 @@
   <h1>Dashboard</h1>
   </header>
 <div id="containerQuickInsight">
-  <p id="quickinsightTitle">Quick Insight</p>
+  
   <div class="card" style="width: 18rem;">
     <div class="card-body">
-      <h5 class="card-title">Total Bookings</h5>
-      <p class="card-text">0</p>
+      <h5 class="card-title">Bookings This Week</h5>
+      <h5 class="card-text">888</h5>
+    </div>
+  </div>
+  <div class="card2" style="width: 18rem;">
+    <div class="card-body">
+      <h5 class="card-title">Earnings This Month</h5>
+      <h5 class="card-text">888</h5>
     </div>
   </div>
 </div>
