--- a/app/static/css/dashboard.css
+++ b/app/static/css/dashboard.css
@@ -14,30 +14,46 @@ body {
 
 #containerQuickInsight{
     position: absolute;
-    right: 100px;
+    left: 226px;
     display: flex !important;
-    top: 111px;
-    
+    top: 250px;
 }
 
 #quickinsightTitle{
-    font-size: 30px;
-
+    font-size: 25px;
+    text-align: center !important;
 }
 
+.card-body{
+    text-align: center;
+}
+
+.card2{
+    display: flex;
+    justify-content: space-around;
+    margin-top: 50px;
+    position: absolute;
+    bottom: -70px;
+    background-image: linear-gradient(to right, rgb(104, 104, 104) , rgb(245, 245, 245));
+    border-radius: 30px;
+    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+}
 
 .card{
     position: absolute;
     bottom: -150px;
-    background-color: aquamarine;
+    background-image: linear-gradient(to right, rgb(104, 104, 104) , rgb(245, 245, 245));
     border-radius: 30px;
+    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+    
 }
 
 #main{ 
     position: absolute;
-    left: 120px;
-    width: 40%;
+    right: 100px;
+    width: 70%;
     bottom: -29px;
+    top: 240px;
 }
 #sidebarfullscreen {
     width: 200px;
@@ -156,14 +172,18 @@ padding-left: 20px;
 
 #calendar{
 margin-top: -110px;
+margin-left: 80px;
 
 }
 
 /* Responsive Sidebar (ON Small Screens ONLY!!!!!!) */
-@media (max-width: 1911px) {
+@media (max-width: 800px) {
     /* test */
-    
+    .card, .card2, #quickinsightTitle{
+        display: none;
 
+    }
+    
     #sidebar {
         height: 100%;
         position: absolute;
@@ -217,20 +237,22 @@ margin-top: -110px;
 
     .fc-col-header { /* MIGHT BE USELESS??? */
         border-radius: 16px !important;
+        box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
         
       }
       
     .fc-scrollgrid { /* Formatting grid for top and left */
         border-radius: 16px !important;
+        box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
       }
       .fc-scrollgrid-section > th {/* Formatting grid for right*/
         border-radius: 0px 16px 0px 0px !important;
-        border-right: 5px solid rgb(8, 0, 0);
+        box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
         
       }
       .fc-scrollgrid-section > td {/* Formatting grid for bottom right*/
         border-radius: 0px 0px 16px 16px !important;
-        border-right: 5px solid rgb(8, 0, 0);
+        box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
         
       }
 }
