--- a/app/static/css/profilesettings.css
+++ b/app/static/css/profilesettings.css
@@ -46,7 +46,7 @@ padding-left: 20px;
     height: -20px;
     margin-left: 10px;
     padding: 20px;
-    font-size: 50px;
+    font-size: 100px;
 }
 
 /* Adjust navbar */
@@ -137,3 +137,15 @@ img {
     border: 4px solid #2f2f2f;
     border-radius: 50%;
 }
+
+.radio-lg {
+    scale: 1.4;
+}
+
+.custom-radio .form-check-input:checked {
+    background-color: #2f2f2f;
+}
+
+ul{
+    list-style-type: none;
+ }
