--- a/app/templates/myservices.html
+++ b/app/templates/myservices.html
@@ -1,4 +1,4 @@
-{% extends "dashboard.html" %}
+{% extends "base.html" %}
 {% import "bootstrap/wtf.html" as wtf %}
 
 {% block title %}My Services{% endblock %}
