--- a/app/templates/myservices.html
+++ b/app/templates/myservices.html
@@ -53,7 +53,10 @@
   
 
       <div class="bg-light clearfix mb-3 p-3 rounded">
-        <h1 class="allservice">All Services</h1>
+        <header id="header">
+          <h1>All Services</h1>
+        </header>
+        
         <!-- Button to toggle adding a new service -->
         <button type="button" class="pull-right btn btn-primary btn-block btn-create-service" data-toggle="modal" data-target="#Modal">+ Create New Service</button>
       </div>
