--- a/app/static/css/myservices.css
+++ b/app/static/css/myservices.css
@@ -1,45 +1,6 @@
 body {
     background-color: #f4f4f4;
 }
-
-#sidebar {
-    width: 100px;
-    position: fixed;
-    top: 52px; /* Adjust to match navbar height */
-    left: 0;
-    height: 100%;
-    background: #ffffff;
-    padding-top: 20px;
-    transition: all 0.3s ease-in-out;
-    overflow-y: auto;
-    box-shadow: 5px 10px 30px rgb(197, 197, 202);
-}
-
-#sidebar.expanded{
-    width: 200px;
-}
-
-#sidebar.expanded a{
-text-align: left;
-padding-left: 20px;
-}
-
-/* Text of letters */
-#sidebar a {
-    color: rgb(0, 0, 0);
-    padding: 10px;
-    display: block;
-    text-decoration: none;
-    margin-top: 20px;
-    white-space: nowrap;
-    text-overflow: ellipsis;
-    text-align: center;
-}
-
-#sidebar a:hover {
-    background: #495057;
-}
-
 /* Content */
 #content {
     margin-left: 2px;
@@ -142,14 +103,6 @@ padding-left: 20px;
 
 /* Responsive Sidebar (ON Small Screens ONLY!!!!!!) */
 @media (max-width: 768px) {
-    #sidebar {
-        height: 100%;
-        position: absolute;
-        width: 100px;
-        top: 56px; /* Below navbar */
-        left: 0;
-        top: 52px; 
-        }
 
     #sidebar.expanded{
         width: 200px;
@@ -160,16 +113,11 @@ padding-left: 20px;
     }
     
     #content {
-        margin-top: -50px;
-        margin-left: 80px;
+        margin-top: auto;
+        margin-left: 200px;
     }
 
     #sidebar.expanded ~ #header{
         margin-left: 200px;
-    }
-
-    #header{
-        margin-top: -50px;
-        margin-left: 80px;
     }
 }
