--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -1,7 +1,37 @@
 {% extends "bootstrap/base.html" %}
 {% import "bootstrap/wtf.html" as wtf %}
 
+{% block head %}
+{{ super() }}
+<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+<link rel="stylesheet" href="{{ url_for('static', filename='css/base.css') }}?v=5">
+{% endblock %}
+
 {% block navbar %}
+<!-- IF USER IS LOGGED IN THEY WILL SEE SIDE NAV BAR-->
+{% if current_user.is_authenticated %}
+<div id="sidebar">
+    <p id="sidebartitle">Loyals Booking</p>
+    <a href="{{ url_for('main.dashboard') }}">
+      <span class="material-icons">dashboard</span> Dashboard
+    </a>
+    <a href="{{ url_for('main.rewards') }}">
+      <span class="material-icons">card_giftcard</span> Rewards
+    </a>
+    <a href="#">
+      <span class="material-icons">people</span> Clients
+    </a>
+    <a href="{{ url_for('main.myservices') }}">
+      <span class="material-icons">build</span> My Services
+    </a>
+    <a href="{{ url_for('auth.logout') }}">
+      <span class="material-icons">logout</span> Logout
+    </a>
+  </div>
+  {% endif %}
+
+  <!-- IF USER IS NOT LOGGED IN THEY WILL SEE THE TOP NAV BAR-->
+{% if not current_user.is_authenticated %}
 <div class="navbar navbar-inverse" role="navigation">
     <div class="container">
         <div class="navbar-header">
@@ -24,24 +54,9 @@
         </div>
     </div>
 </div>
+{% endif %}
 
-<nav class="navbar fixed-top">
-    <div class="container-fluid"></div>
-</nav>
 
-<div id="sidebar">
-    <button class="navbar-toggler" type="button" onclick="document.getElementById('sidebar').classList.toggle('expanded')"></button>
-    <a href="{{ url_for('main.dashboard') }}">Dashboard</a>
-    <a href="{{ url_for('main.profilesettings') }}">Profile</a>
-    <a href="{{ url_for('main.pricing') }}">Pricing</a>
-    <a href="{{ url_for('main.rewards') }}">Rewards</a>           <"sidebar a" in the css folder -->
-   
-    <a href="#">Clients</a> 
-
-    <a href="{{ url_for('main.myservices') }}">My Services</a>
-    <a href="{{ url_for('auth.logout') }}">Logout</a>
-
-  </div>
 
 {% endblock %}
 
