--- a/app/templates/dashboard.html
+++ b/app/templates/dashboard.html
@@ -9,26 +9,14 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/fullcalendar@6.1.15/index.global.min.css">
   <script src="https://cdn.jsdelivr.net/npm/fullcalendar@6.1.15/index.global.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 {% endblock %}
 
 {% block page_content %}
 {% block content %}
-<div class="container-fluid">
-  <nav class="navbar fixed-top bg-dark">
-    <div class="container-fluid">
-      <span class="navbar-brand text-light fw-bold" style="font-family: 'Playfair Display', serif;">Loyals Admin</span>
-    </div>
-  </nav>
 
-  <!-- Sidebar -->
-  <div id="sidebarfullscreen">
-    <p id="sidebartitle">Loyals Booking</p>
-    <a href="{{ url_for('main.dashboard') }}">Dashboard</a>
-    <a href="{{ url_for('main.rewards') }}">Rewards</a>
-    <a href="#">Clients</a>
-    <a href="{{ url_for('main.myservices') }}">My Services</a>
-    <a href="{{ url_for('auth.logout') }}">Logout</a>
-  </div>
+
+
 
   <!-- Header -->
   <header id="header">
